Downgraded to php7.4

--- a/php-fpm/Dockerfile
+++ b/php-fpm/Dockerfile
@@ -2,7 +2,7 @@
 # WordPress Dockerfile
 #
 
-FROM wordpress:php8.0-fpm
+FROM wordpress:php7.4-fpm
 LABEL maintainer="Marius Bezuidenhout <marius.bezuidenhout@gmail.com>"
 
 RUN apt-get update &&\
@@ -15,7 +15,8 @@ RUN apt-get update &&\
 
 COPY docker-entrypoint.sh /usr/local/bin/
 RUN chmod +x /usr/local/bin/docker-entrypoint.sh \
-    && cp /usr/local/etc/php/php.ini-production /usr/local/etc/php/php.ini
+    && cp /usr/local/etc/php/php.ini-production /usr/local/etc/php/php.ini \
+    && sed -i -e 's/expose_php = On/expose_php = Off/' /usr/local/etc/php/php.ini
 ENTRYPOINT ["docker-entrypoint.sh"]
 
 CMD ["php-fpm"]
