--- a/php-fpm/Dockerfile
+++ b/php-fpm/Dockerfile
@@ -17,7 +17,9 @@ COPY docker-entrypoint.sh /usr/local/bin/
 RUN chmod +x /usr/local/bin/docker-entrypoint.sh \
     && cp /usr/local/etc/php/php.ini-production /usr/local/etc/php/php.ini \
     && sed -i -e 's/expose_php = On/expose_php = Off/' /usr/local/etc/php/php.ini \
-    && echo -e "opcache.interned_strings_buffer=16\nopcache.max_accelerated_files=5000\nopcache.memory_consumption=192" > /usr/local/etc/php/conf.d/opcache-zzz.ini
+    && sed -i -e 's/pm.max_children = 5/pm.max_children = 8/' /usr/local/etc/php-fpm.d/www.conf \
+    && sed -i -e 's/pm.max_spare_servers = 3/pm.max_spare_servers = 6/' /usr/local/etc/php-fpm.d/www.conf \
+    && echo "opcache.interned_strings_buffer=16\nopcache.max_accelerated_files=5000\nopcache.memory_consumption=192" > /usr/local/etc/php/conf.d/opcache-zzz.ini
 ENTRYPOINT ["docker-entrypoint.sh"]
 
 CMD ["php-fpm"]
