Added jit for php8.1-fpm

--- a/php-fpm/Dockerfile
+++ b/php-fpm/Dockerfile
@@ -19,7 +19,7 @@ RUN chmod +x /usr/local/bin/docker-entrypoint.sh \
     && sed -i -e 's/expose_php = On/expose_php = Off/' /usr/local/etc/php/php.ini \
     && sed -i -e 's/pm.max_children = 5/pm.max_children = 8/' /usr/local/etc/php-fpm.d/www.conf \
     && sed -i -e 's/pm.max_spare_servers = 3/pm.max_spare_servers = 6/' /usr/local/etc/php-fpm.d/www.conf \
-    && echo "opcache.interned_strings_buffer=16\nopcache.max_accelerated_files=5000\nopcache.memory_consumption=192" > /usr/local/etc/php/conf.d/opcache-zzz.ini
+    && echo "opcache.interned_strings_buffer=16\nopcache.max_accelerated_files=5000\nopcache.memory_consumption=192\nopcache.jit_buffer_size=256M" > /usr/local/etc/php/conf.d/opcache-zzz.ini
 ENTRYPOINT ["docker-entrypoint.sh"]
 
 CMD ["php-fpm"]
